services/whoami/whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.test
    http:
      paths:
      - path: /whoami  #https://whoami.test:32444/whoami
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
  - host: naavre-dev.minikube.test #https://naavre-dev.minikube.test:32444/whoami
    http:
      paths:
      - path: /whoami
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
